# deployml_course

./: README.md
p1/: __init__.py  main.py  report.html  requirements.txt  tox.ini
p1/config/: config.py  logging_conf.py
p1/data/consts/: mapId.json  zipcode.json
p1/notebooks/: __init__.py
p2/: .gitignore  __init__.py  main.py  params.yaml  plot.json  requirements.txt  tox.ini
p2/config/: __init__.py  config.py  logging_conf.py
p2/dvcstages/: desc.txt  readme.md
p2/profiling/: FeatureSelection.ipynb  ModelInterp.ipynb  ModelSelection&Tuning.ipynb
p2_pres/: ~$p2.pptx
p3/: requirements.txt  runner.py
p3/notebooks/: Api_ex.ipynb  KedroEx.ipynb
p3_api_serv/: receiver.py  serv_app.py
p3_api_serv/data_vault/: answer.csv  sent.csv  test_x.csv
p3_bento/: runner.py
p3_bento/static/: index.html
p4/: runner.py
p4/notebooks/: KedroEx.ipynb  MultiIndexEx.ipynb  testProblem.ipynb  testWHypo.ipynb
p5/: README.md
p5/expectations/: .ge_store_backend_id
p5/notebooks/: fs_exm.ipynb
p5/src/: setup.py
p5/uncommitted/: config_variables.yml
p6/: Dockerfile  runner.py
p7/: great_expectations.yml  pyproject.toml
p7/notebooks/: AirFlowExm.ipynb  BonoboExm.ipynb  MultiIndexEx.ipynb  ge_exm.ipynb  kedroAPIEx.ipynb  output.txt  testProblem.ipynb  testWHypo.ipynb
p7/src/bike/pipelines/data_engineering/: pipeline.py
p7/src/bike/pipelines/predict_pipeline/: __init__.py  nodes.py
p7/src/tests/nodes/: test_de_allnodes_hypolib.py  test_de_nodes.py
p7_airflow_container/: docker-compose.yml
p8/AB_deploy/: ABn Testing.ipynb
p8_pres/: p8.pptx
(+107 files in other folders)
